# mlflow-postgres-minio

./: .env.example  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  README.md  default.env  docker-compose.yml  environment.yml  pyproject.toml  wine_quality_example.py
mcp/: .dockerignore  Dockerfile  Dockerfile_fastapi  Dockerfile_http  README.md  pyproject.toml
mcp/src/mcp_server_mlflow/: __init__.py  __main__.py  fastapi_server.py  http_server.py  server.py  utils.py
mcp/tests/: test_server.py
mlflow/: Dockerfile
wine_quality_example/: predict.py  train.py  validate.py  wine_quality_example.py
