[project]
name = "mlflow-postgres-minio"
version = "0.1.2"
description = "Automatic setup and deploy a MLflow server."
authors = [
    {name = "pandego"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"


dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "boto3 (>=1.37.34,<2.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "mlflow (>=2.22.0,<3.0.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "numpy (==2.2.4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
