[project]
name = "mlflow-postgres-minio"
version = "0.1.3"
description = "Automatic setup and deploy a MLflow server."
authors = [{name = "pandego"}]
readme = "README.md"

requires-python = ">=3.11,<3.12"

dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "boto3 (>=1.37.34,<2.0.0)",
    "mlflow (>=2.22.0,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5,<7.0.0",
    "pre-commit>=4.2.0,<5.0.0",
]
tests = [
    "pytest>=8.3.5,<9.0.0",
]
