[project]
name = "mcp-server-mlflow"
version = "0.0.1"
description = "A Model Context Protocol server providing a tool to infer wine quality based on its chemical properties."
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "pandego" }]
keywords = ["wine", "mcp", "mlflow", "llm", "automation", "example"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "mcp[cli] (>=1.9.0,<2.0.0)",
    "uvicorn (>=0.34.0,<0.40.0)",
    "uv (>=0.7.4,<0.8.0)",
    "fastapi>=0.115.13",
]

[dependency-groups]
dev = [
    "ruff>=0.7.3",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "respx>=0.22.0",
]

[project.scripts]
mcp-server-mlflow = "mcp_server_mlflow:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
